--- a/journeyHtml/index.html
+++ b/journeyHtml/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <!-- Tell browsers not to scale the viewport automatically -->
@@ -8,4 +9,39 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
+
+  <body>
+    <header>
+      <h1> Journey Before Destination!</h1>
+
+      <nav>
+        <menu>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="quiz.html">Quiz</a></li>
+          <li><a href="results.html">Results</a></li>
+          <li><a href="about.html">About</a></li>
+        </menu>
+      </nav>
+
+      <hr />
+    </header>
+
+    <main>
+      <h1>Speak the Words</h1>
+      <p>Take the quiz to find out which order of Knights Radiant you belong to</p>
+      <form method="get" action="quiz.html">
+        <label for="name">Name</label>
+        <input type="text" id="name" placeholder="Your name here" />
+        <button type="submit">Login</button>
+      </form>
+    </main>
+
+    <footer>
+      <hr />
+      <span class="text-reset">Tanner Reeve</span>
+      <br />
+      <a href="https://github.com/reevet13/260startup.git">GitHub</a>
+    </footer>
+  </body>
+
 </html>
