added the about page, including an image and quote, as well as a link to the official version of the quiz

--- a/journeyHtml/about.html
+++ b/journeyHtml/about.html
@@ -27,13 +27,18 @@
     </header>
 
     <main>
-      <h1>Speak the Words</h1>
-      <p>Take the quiz to find out which order of Knights Radiant you belong to.</p>
-      <form method="get" action="quiz.html">
-        <label for="name">Name</label>
-        <input type="text" id="name" placeholder="Your name here" />
-        <button type="submit">Login</button>
-      </form>
+      <div id="picture" class="picture_box"><img width="400px" src="placeholder.jpg" alt="random" /></div>
+
+      <p>
+        This quiz is in no way official and is not affiliated with Brandon Sanderson or Dragronsteel. In fact, you can
+        take an official quiz on his website <a href="https://www.brandonsanderson.com/official-knights-radiant-order-quiz/"
+        >here</a>
+      </p>
+
+      <p>
+        "Sometimes a hypocrite is nothing more than a man in the process of changing" - Dalinar Kholin, Oathbringer
+      </p>
+
     </main>
 
     <footer>
