--- a/journeyHtml/quiz.html
+++ b/journeyHtml/quiz.html
@@ -13,6 +13,7 @@
   <body>
     <header>
       <h1> Journey Before Destination!</h1>
+      <h2>Knight Radiant Quiz</h2>
 
       <nav>
         <menu>
