correct files now

--- a/journeyjs/index.html
+++ b/journeyjs/index.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS link -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <title>Your Title Here</title>
+
+    <script src="login.js"></script>
 </head>
 
 <body>
