--- a/public/about.html
+++ b/public/about.html
@@ -52,6 +52,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <!-- Include your randomQuote.js file -->
-    <script src="randomQuote.js"></script>
+    <script src="about.js"></script>
   </body>
 </html>
